fix: modal z-index and apply scroll lock when opened

--- a/packages/components/modal/src/styles/index.module.scss
+++ b/packages/components/modal/src/styles/index.module.scss
@@ -1,4 +1,5 @@
 @import "@react-ck/theme";
+@import "@react-ck/elevation";
 
 .root {
   @include define-css-var(modal, spacing, get-spacing(5));
@@ -6,11 +7,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
+  z-index: map-get-strict($elevation, overlay);
+}
+
+.lock_scroll {
+  overflow: hidden;
 }
 
 .clickable_overlay {
